<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/ivScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/shape_scan_bg"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ivFlash"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/flash"
        android:padding="8dp"
        android:src="@drawable/selector_flash" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/image"
        android:padding="8dp"
        android:src="@drawable/icon_image" />

    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorResultBg"
        android:minHeight="96dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/colorResultTipText"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorResultText"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/copy"
            android:textColor="@color/colorResultText"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>